--- a/vignettes/baRulho_quantifying_sound_degradation.Rmd
+++ b/vignettes/baRulho_quantifying_sound_degradation.Rmd
@@ -121,19 +121,167 @@ The package requires the data to be input as extended selection tables. An exten
 
 A common sequence of steps to experimentally test hypotheses related to signal transmission is depicted in the following diagram:
 
- <center><img src="analysis_workflow.png" alt="analysis workflow"></center>
+ <center><img src="analysis_workflow.png" alt="analysis workflow" width="620"></center>
 
 &nbsp;
 
-[baRulho](https://cran.r-project.org/package=baRulho) offers functions for critical steps in this workflow (those in black, including 'checks') that required acoustic data manipulation and analysis. The tools available in this package will be presented following the above workflow.
+[baRulho](https://cran.r-project.org/package=baRulho) offers functions for critical steps in this workflow (those in black, including 'checks') that required acoustic data manipulation and analysis. Additional functions from [warbleR](https://cran.r-project.org/package=warbleR) can be also used to complement functions in [baRulho](https://cran.r-project.org/package=baRulho). The tools available in this package will be presented following the above workflow.
+
+&nbsp;
+
+
+# Synthetizing sounds
+
+In some cases we want to figure out how transmission properties vary across a range of frequencies.
+For instance, Tobias et al (2010) studied whether acoustic adaptation (a especial case of sensory drive, Morton 1975), could explain song evolution in Amazonian avian communities.  To test this the authors created synthetic pure tone sounds that were used as playbacks and re-recorded in different habitats. This is the actual procedure of creating synthetic souds as they described it: " Tones were synthesized at six different frequencies (0.5, 1.0, 2.0, 3.0, 4.0, and 5.0 kHz) to encompass the range of maximum avian auditory sensitivity (Dooling 1982). At each frequency, we generated two sequences of two 100-msec tones. One sequence had  a  relatively  short  interval  of  150  msec,  close  to  the  mean internote interval in our sample (152± 74 msec). The other se-quence had a longer interval of 250 msec, close to the mean max-imum internote interval in our sample (283± 74 msec). The first sequence reflects a fast-paced song and the second a slower paced song  (sensu  Slabbekoorn  et  al.  2007).  The  master  file  (44100 Hz/16 bit WAV) thereby consisted of a series of 12 pairs of artifi-cial 100-ms constant-frequency tones at six different frequencies (0.5, 1.0, 2.0, 3.0, 4.0, and 5.0 kHz)." 
+
+We can synthesize a similar master sound file using the function `sim_songs()` from the package [warbleR](https://cran.r-project.org/package=warbleR). The function requires 1) the number of tones to synthesize (argument `n`), 2) the duration of the tones (`durs`, in s), 3) the duration of the intervals (`gaps`, in s) and 3) the frequencies for each tone to be synthesized (`freqs`, in kHz). In addition, the argument `diff_fun` should be set to "pure.tone" and he argument `harm` to 1 to remove harmonics. In our case we need six tones of 100 ms at 0.5, 1, 2, 3, 4, and 5 kHz separated by intervals of 150 ms (at least for the first synthetic file described in Tobias et al 2010). We can also get a selection table (sensu [warbleR](https://cran.r-project.org/package=warbleR)) with the information about the time and frequency location of every sound. This would be required in order to make the master sound file. To get the selection table we need to set the argument `selec_table = TRUE`. This can be synthesize as follows:
+
+
+```{r, eval = TRUE}
+
+synth.l <- sim_songs(n = 6, durs = 0.1, freqs = c(0.5, 1:5), harms = 1, gaps = 0.15, 
+                     diff.fun = "pure.tone", selec.table = TRUE, path = td)
+
+spectro(synth.l$wave, scale = FALSE, palette = reverse.topo.colors, grid = FALSE, flim = c(0,6), collevels = seq(-20, 0, 1))
+
+```
+
+&nbsp;
+
+The function returns a list in which the first element is the selection table and the second one the wave object:
+
+```{r, eval = TRUE}
+
+class(synth.l) 
+
+names(synth.l)
+
+```
+
+```{r, eval = TRUE}
+
+synth.l$selec_table  
+
+```
+
+```{r, eval = FALSE, echo = TRUE}
+
+kbl <- kable(synth.l$selec_table, align = "c", row.names = F,  format = "html", escape = F)
+
+kbl <-  kable_styling(kbl, bootstrap_options = "striped", font_size = 14)
+
+kbl
+
+```
+<table class="table table-striped" style="font-size: 14px; margin-left: auto; margin-right: auto;">
+ <thead>
+  <tr>
+   <th style="text-align:center;"> sound.files </th>
+   <th style="text-align:center;"> selec </th>
+   <th style="text-align:center;"> start </th>
+   <th style="text-align:center;"> end </th>
+   <th style="text-align:center;"> bottom.freq </th>
+   <th style="text-align:center;"> top.freq </th>
+  </tr>
+ </thead>
+<tbody>
+  <tr>
+   <td style="text-align:center;"> 2020-01-09_17:00:50.wav </td>
+   <td style="text-align:center;"> 1 </td>
+   <td style="text-align:center;"> 0.15 </td>
+   <td style="text-align:center;"> 0.25 </td>
+   <td style="text-align:center;"> 0.5 </td>
+   <td style="text-align:center;"> 0.5 </td>
+  </tr>
+  <tr>
+   <td style="text-align:center;"> 2020-01-09_17:00:50.wav </td>
+   <td style="text-align:center;"> 2 </td>
+   <td style="text-align:center;"> 0.40 </td>
+   <td style="text-align:center;"> 0.50 </td>
+   <td style="text-align:center;"> 1.0 </td>
+   <td style="text-align:center;"> 1.0 </td>
+  </tr>
+  <tr>
+   <td style="text-align:center;"> 2020-01-09_17:00:50.wav </td>
+   <td style="text-align:center;"> 3 </td>
+   <td style="text-align:center;"> 0.65 </td>
+   <td style="text-align:center;"> 0.75 </td>
+   <td style="text-align:center;"> 2.0 </td>
+   <td style="text-align:center;"> 2.0 </td>
+  </tr>
+  <tr>
+   <td style="text-align:center;"> 2020-01-09_17:00:50.wav </td>
+   <td style="text-align:center;"> 4 </td>
+   <td style="text-align:center;"> 0.90 </td>
+   <td style="text-align:center;"> 1.00 </td>
+   <td style="text-align:center;"> 3.0 </td>
+   <td style="text-align:center;"> 3.0 </td>
+  </tr>
+  <tr>
+   <td style="text-align:center;"> 2020-01-09_17:00:50.wav </td>
+   <td style="text-align:center;"> 5 </td>
+   <td style="text-align:center;"> 1.15 </td>
+   <td style="text-align:center;"> 1.25 </td>
+   <td style="text-align:center;"> 4.0 </td>
+   <td style="text-align:center;"> 4.0 </td>
+  </tr>
+  <tr>
+   <td style="text-align:center;"> 2020-01-09_17:00:50.wav </td>
+   <td style="text-align:center;"> 6 </td>
+   <td style="text-align:center;"> 1.40 </td>
+   <td style="text-align:center;"> 1.50 </td>
+   <td style="text-align:center;"> 5.0 </td>
+   <td style="text-align:center;"> 5.0 </td>
+  </tr>
+</tbody>
+</table>
+
+&nbsp;
+
+The function also saves the associated '.wav' file in the working directory (in this example `tempdir()`). 
 
 &nbsp;
 
 # Create master sound file for playback
 
 The function `master_sound_file()` creates a master sound file (as you probably guessed) for playback experiments. The function takes wave objects from an extended selection table containing the model signals and concatenates them in a single sound file (with some silence in between signals which length can be modified). `master_sound_file()` adds acoustic markers at the start and end of the playback that can be used to time-sync re-recorded signals, which streamlines quantification of acoustic degradation. 
+The following example shows how to create a master sound file using the synthetic sounds generated above. For the synthetic sounds we need to add a little space between the top and bottom frequency because `sim_songs()` make those values the same for pure tones: 
 
-The following example shows how to create a master sound file using the example data and recordings from the package [warbleR](https://cran.r-project.org/package=warbleR):
+```{r, eval = FALSE, echo = TRUE}
+
+# extract selection table
+st <- synth.l$selec.table 
+
+# add freq range (0.5 kHz)
+st$bottom.freq <- st$bottom.freq - 0.25
+st$top.freq <- st$top.freq + 0.25
+
+# make an extended selection table
+synth.est <- selection_table(X = st, extended = TRUE, pb = FALSE,
+                             confirm.extended = FALSE, path = td)
+
+# create master sound file
+synth.master.sf <- master_sound_file(X = synth.est, file.name = "synthetic_master", 
+dest.path = td, gap.duration = 0.15)
+
+```
+
+&nbsp;
+
+The function saves the master sound file as a wave file and returns a selection table in the R environment with the time and frequency 'coordinates' of the signals in the file. We can look at the spectrogram of the output file using the [warbleR](https://cran.r-project.org/package=warbleR) function `spectrograms()` as follows:
+
+```{r, eval=FALSE, echo=TRUE}
+
+spectrograms(synth.master.sf, path = td, by.song = "sound.files", 
+           xl = 3, collevels = seq(-60, 0, 5))
+
+```
+
+ <img src="synthetic_master.wav.jpeg" alt="spectrogram of master file">
+
+
+The function can also create a master sound file from sounds from different sounds files, as is likely the case with recordings collected in the field. The following example shows how to create a master sound file using several sound files. The code uses the example data and recordings from the package [warbleR](https://cran.r-project.org/package=warbleR):
 
 ```{r, eval = FALSE, echo = TRUE}
 
@@ -152,25 +300,26 @@ est <- selection_table(X = lbh_selec_table, extended = TRUE, confirm.extended = 
 path = td)
 
 # create master sound file
-master.st <- master_sound_file(X = est, file.name = "example_master", 
+master.sf <- master_sound_file(X = est, file.name = "example_master", 
 dest.path = td, gap.duration = 0.3)
 
 ```
 
 &nbsp;
 
-The function saves the master sound file as a wave file and returns a selection table in the R environment with the time and frequency 'coordinates' of the signals in the file. We can look at the spectrogram of the output file using the [warbleR](https://cran.r-project.org/package=warbleR) function `spectrograms()` as follows:
+Again, we can look at the spectrogram of the output file:
 
 ```{r, eval=FALSE, echo=TRUE}
 
-spectrograms(master.st, path = td, by.song = "sound.files", 
+spectrograms(master.sf, path = td, by.song = "sound.files", 
            xl = 3, collevels = seq(-60, 0, 5))
 
 ```
 
+
  <img src="example_master.wav.jpeg" alt="spectrogram of master file">
 
-The output could also be explored in [Raven sound analysis software](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) ([Cornell Lab of Ornithology](http://www.birds.cornell.edu)) using the function `exp_raven()` from the [Rraven](https://cran.r-project.org/package=Rraven) package. `exp_raven()` exports selections in the R environment to a '.txt' file that can be read in Raven:
+Note that the output could also be explored in [Raven sound analysis software](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) ([Cornell Lab of Ornithology](http://www.birds.cornell.edu)) using the function `exp_raven()` from the [Rraven](https://cran.r-project.org/package=Rraven) package. `exp_raven()` exports selections in the R environment to a '.txt' file that can be read in Raven:
  
 
 ```{r, eval = FALSE}
@@ -196,10 +345,10 @@ Once we went to the field (or lab) and re-recorded the master sound files at dif
 ```{r, eval = FALSE}
 
 # create a matrix that contains the selection/files to be cross-correlated
-comp_mat <- matrix(c(paste(master.st$sound.files[1], master.st$selec[1], sep = "-"), "example_master.wav"),nrow = 1)
+comp_mat <- matrix(c(paste(master.sf$sound.files[1], master.sf$selec[1], sep = "-"), "example_master.wav"),nrow = 1)
 
 # run cross correlation
-xc <- xcorr(master.st, compare.matrix = comp_mat, wl = 300, ovlp = 30, path = td, output = "list")
+xc <- xcorr(master.sf, compare.matrix = comp_mat, wl = 300, ovlp = 30, path = td, output = "list")
 
 # find peaks
 pks <- find_peaks(xc.output = xc, max.peak = TRUE, path = td)
@@ -248,7 +397,7 @@ The output of `find_peaks()` indicate that the start marker is found starting at
 ```{r, eval = FALSE}
 
 # start on new recording
-new.start  <- master.st$start[!master.st$orig.sound.file %in%  c("start_marker", "end_marker")] - master.st$start[1] + pks$start[1]
+new.start  <- master.sf$start[!master.sf$orig.sound.file %in%  c("start_marker", "end_marker")] - master.sf$start[1] + pks$start[1]
 
 new.start 
 ```
@@ -265,7 +414,7 @@ The end of the signals would be their duration plus the start we just calculated
 ```{r, eval = FALSE}
 
 # get duration
-durs  <- master.st$end[!master.st$orig.sound.file %in% c("start_marker", "end_marker")] - master.st$start[!master.st$orig.sound.file %in% c("start_marker", "end_marker")]
+durs  <- master.sf$end[!master.sf$orig.sound.file %in% c("start_marker", "end_marker")] - master.sf$start[!master.sf$orig.sound.file %in% c("start_marker", "end_marker")]
 
 new.end <- new.start + durs
   
@@ -284,7 +433,7 @@ These is all the data we need to create a new selection table that will allow us
 ```{r, eval = FALSE}
 
 # get subset exclufing markers
-new.st  <- master.st[!master.st$orig.sound.file %in% c("start_marker", "end_marker"), ]
+new.st  <- master.sf[!master.sf$orig.sound.file %in% c("start_marker", "end_marker"), ]
 
 # fix time columns
 new.st$start <- new.start
@@ -913,6 +1062,8 @@ Araya-Salas, M. (2020), *baRulho: quantifying habitat-induced degradation of (an
 1. Marten, K., & Marler, P. (1977). Sound transmission and its significance for animal vocalization. Behavioral Ecology and Sociobiology, 2(3), 271-290.
 
 1. Morton, E. S. (1975). Ecological sources of selection on avian sounds. The American Naturalist, 109(965), 17-34.
+
+1. Tobias, J. A., Aben, J., Brumfield, R. T., Derryberry, E. P., Halfwerk, W., Slabbekoorn, H., & Seddon, N. (2010). Song divergence by sensory drive in Amazonian birds. Evolution: International Journal of Organic Evolution, 64(10), 2820-2839.
 
 <font size="4">Session information</font>
 
