added vignette editions 7

--- a/vignettes/baRulho_quantifying_sound_degradation.Rmd
+++ b/vignettes/baRulho_quantifying_sound_degradation.Rmd
@@ -98,7 +98,7 @@ library(viridis)
 
 ### Inputting acoustic data and annotations
 
-The package requires the data to be input as extended selection tables. An extended selection table is an object class in R that contains both the annotations (locations of signals in time and frequency) and the corresponding acoustic data as wave objects. Therefore, these are **self-contained objects** since the original sound files are no longer needed to perform acoustic analyses. These objects are created by the `selection_table()` function from [warbleR](https://cran.r-project.org/package=warbleR), or can be generated from Raven and Syrinx selection tables using the `imp_raven()` or `imp_syrinx()` functions from [Rraven](https://cran.r-project.org/web/packages/Rraven/index.html). Take a look at the [intro to warbleR vignette](https://cran.r-project.org/web/packages/Rraven/vignettes/Rraven.html), and the [Rraven vignette](https://cran.r-project.org/web/packages/Rraven/vignettes/Rraven.html) for more details.
+The package requires the data to be input as extended selection tables. An extended selection table is an object class in R that contains both the annotations (locations of signals in time and frequency) and the corresponding acoustic data as wave objects. Therefore, these are **self-contained objects** since the original sound files are no longer needed to perform acoustic analyses. These objects are created by the `selection_table()` function from [warbleR](https://cran.r-project.org/package=warbleR), or can be generated from Raven and Syrinx selection tables using the `imp_raven()` or `imp_syrinx()` functions from [Rraven](https://cran.r-project.org/package=Rraven). Take a look at the [intro to warbleR vignette](https://cran.r-project.org/package=warbleR/vignettes/Intro_to_warbleR.html), and the [Rraven vignette](https://cran.r-project.org/package=Rraven/vignettes/Rraven.html) for more details.
 
 <div class="alert alert-info">
 
