--- a/vignettes/baRulho_quantifying_sound_degradation.Rmd
+++ b/vignettes/baRulho_quantifying_sound_degradation.Rmd
@@ -36,7 +36,7 @@ editor_options:
 &nbsp; 
 
 
-The [baRulho](https://cran.r-project.org/package=baRulho) package is intended to facilitate acoustic analysis of (animal) sound transmission experiments. Such studies typically aim to quantify changes in signal structure when transmitted in a given habitat by broadcasting and re-recording animal sounds at increasing distances. We will refer to these changes in signal structure 'degradation' for the sake of simplicity. The package offers a workflow with functions to prepare the data set for analysis as well as to calculate and visualize several degradation metrics. [baRulho](https://cran.r-project.org/package=baRulho) builds upon functions and data formats from the [warbleR](https://cran.r-project.org/package=warbleR) and [seewave](https://cran.r-project.org/package=seewave) packages, so some experience with these packages is advised.
+The [baRulho](https://marce10.github.io/baRulho/) package is intended to facilitate acoustic analysis of (animal) sound transmission experiments. Such studies typically aim to quantify changes in signal structure when transmitted in a given habitat by broadcasting and re-recording animal sounds at increasing distances. We will refer to these changes in signal structure 'degradation' for the sake of simplicity. The package offers a workflow with functions to prepare the data set for analysis as well as to calculate and visualize several degradation metrics. [baRulho](https://marce10.github.io/baRulho/) builds upon functions and data formats from the [warbleR](https://cran.r-project.org/package=warbleR) and [seewave](https://cran.r-project.org/package=seewave) packages, so some experience with these packages is advised.
 
 The main features of the package are:
 
@@ -98,7 +98,7 @@ library(viridis)
 
 ### Inputting acoustic data and annotations
 
-The package requires the data to be input as extended selection tables. An extended selection table is an object class in R that contains both the annotations (locations of signals in time and frequency) and the corresponding acoustic data as wave objects. Therefore, these are **self-contained objects** since the original sound files are no longer needed to perform acoustic analyses. These objects are created by the `selection_table()` function from [warbleR](https://cran.r-project.org/package=warbleR), or can be generated from Raven and Syrinx selection tables using the `imp_raven()` or `imp_syrinx()` functions from [Rraven](https://cran.r-project.org/package=Rraven). Take a look at the [intro to warbleR vignette](https://cran.r-project.org/package=warbleR/vignettes/Intro_to_warbleR.html), and the [Rraven vignette](https://cran.r-project.org/package=Rraven/vignettes/Rraven.html) for more details.
+The package requires the data to be input as extended selection tables. An extended selection table is an object class in R that contains both the annotations (locations of signals in time and frequency) and the corresponding acoustic data as wave objects. Therefore, these are **self-contained objects** since the original sound files are no longer needed to perform acoustic analyses. These objects are created by the `selection_table()` function from [warbleR](https://cran.r-project.org/package=warbleR). Take a look at the [intro to warbleR vignette](https://cran.r-project.org/package=warbleR/vignettes/Intro_to_warbleR.html) for more details.
 
 <div class="alert alert-info">
 
@@ -130,7 +130,7 @@ A common sequence of steps to experimentally test hypotheses related to signal t
 
 &nbsp;
 
-[baRulho](https://cran.r-project.org/package=baRulho) offers functions for critical steps in this workflow (those in black, including 'checks') that required acoustic data manipulation and analysis. Additional functions from [warbleR](https://cran.r-project.org/package=warbleR) can be used (and are used in this vignette) to complement functions in [baRulho](https://cran.r-project.org/package=baRulho). All these tools will be presented following the above workflow.
+[baRulho](https://marce10.github.io/baRulho/) offers functions for critical steps in this workflow (those in black, including 'checks') that required acoustic data manipulation and analysis. Additional functions from [warbleR](https://cran.r-project.org/package=warbleR) can be used (and are used in this vignette) to complement functions in [baRulho](https://marce10.github.io/baRulho/). All these tools will be presented following the above workflow.
 
 &nbsp;
 
@@ -145,26 +145,47 @@ For instance, Tobias et al (2010) studied whether acoustic adaptation (a special
 We can synthesize the same pure tones using the function `sim_songs()` from the package [warbleR](https://cran.r-project.org/package=warbleR). The function requires 1) the number of tones to synthesize (argument `n`, 2) the duration of the tones (`durs`, in seconds, 3) the duration of the intervals (`gaps`, in seconds and 3) the frequencies for each tone to be synthesized (`freqs`, in kHz). In addition, the argument `diff.fun` should be set to "pure.tone" and the argument `harm` to 1 to remove harmonics. In our case we need six tones of 100 ms at 0.5, 1, 2, 3, 4, and 5 kHz separated by intervals of 150 ms (at least for the first synthetic file described in Tobias et al 2010). We can also get a selection table (sensu [warbleR](https://cran.r-project.org/package=warbleR)) with the information about the time and frequency location of every sound. This would be required in order to make the master sound file. To get the selection table we need to set the argument `selec.table = TRUE`. This can be done as follows:
 
 
-```{r, eval = TRUE}
+```{r, eval = FALSE}
 
 # synthesize
 synth.l <- sim_songs(n = 6, durs = 0.1, freqs = c(0.5, 1:5), harms = 1, gaps = 0.15, 
                      diff.fun = "pure.tone", selec.table = TRUE, path = td)
 
 # plot spectro
-spectro(synth.l$wave, scale = FALSE, palette = reverse.topo.colors, grid = FALSE, flim = c(0,6), collevels = seq(-20, 0, 1))
+spectro(synth.l$wave, scale = FALSE, palette = reverse.topo.colors, 
+        grid = FALSE, flim = c(0,6), collevels = seq(-20, 0, 1))
 
 ```
+
+ <img src="spectro_synth_song.png" alt="spectrogram syntehtic sounds" width="550">
+
 
 &nbsp;
 
 The function returns a list in which the first element is the selection table and the second one the wave object:
 
-```{r, eval = TRUE}
+```{r, eval = FALSE}
 
 class(synth.l) 
 
+
+```
+
+```{r, eval = TRUE, echo=FALSE}
+
+c("list")
+
+```
+
+```{r, eval = FALSE}
+
 names(synth.l)
+
+```
+
+```{r, eval = TRUE, echo=FALSE}
+
+c("selec.table", "wave")
 
 ```
 
@@ -253,6 +274,13 @@ The function also saves the associated '.wav' file in the working directory (in 
 ```{r}
 
 list.files(path = td, pattern = "\\.wav$")
+
+```
+
+
+```{r, eval = TRUE, echo=FALSE}
+
+c("2020-01-09_17:00:50.wav")
 
 ```
 
@@ -613,15 +641,15 @@ kbl
 
 &nbsp;
 
-Note that we also added a column for "distance" that will be useful for downsteam analyses (and to keep track of the distance in which the signals were re-recorded!). In addition, the data was converted into an `extended_selection_table`, which is the data format that pretty much all [baRulho](https://cran.r-project.org/package=baRulho) functions take. 
+Note that we also added a column for "distance" that will be useful for downsteam analyses (and to keep track of the distance in which the signals were re-recorded!). In addition, the data was converted into an `extended_selection_table`, which is the data format that pretty much all [baRulho](https://marce10.github.io/baRulho/) functions take. 
 
 This is somewhat a silly example as we are finding the start marker in the original master sound file. However, it demonstrates how this can be done on any re-recorded sound file.
 
-When this process is done manually (or when broadcasting devices add some short delays as the case of some bluetooth transmitters) there could be some small misalignment between the inferred versus the actual start time of re-recorded signals. This is problematic for quantifying degradation in [baRulho](https://cran.r-project.org/package=baRulho) (and other sound analysis software) as precise alignment of signal is crucial for the accuracy of downstream measures of signal degradation. 
+When this process is done manually (or when broadcasting devices add some short delays as the case of some bluetooth transmitters) there could be some small misalignment between the inferred versus the actual start time of re-recorded signals. This is problematic for quantifying degradation in [baRulho](https://marce10.github.io/baRulho/) (and other sound analysis software) as precise alignment of signal is crucial for the accuracy of downstream measures of signal degradation. 
 
 Misalignment can be fixed with the funciton `spcc_align()`. This function uses spectrographic cross-correlation to sync the position in time of signals with regard to a reference signal. `spcc_align()` takes the signal recorded at the closest distance to the source as the reference signal. The function calls [warbleR](https://cran.r-project.org/package=warbleR)'s `xcorr()` and `find_peaks()` (just as we did above) internally to align signals using cross-correlation. 
 
-[baRulho](https://cran.r-project.org/package=baRulho) comes with an example data set called  `playback_est_unaligned`, which contains signals in which the time position of signals is slightly unaligned. We can use this data to show how the function `spcc_align()`: 
+[baRulho](https://marce10.github.io/baRulho/) comes with an example data set called  `playback_est_unaligned`, which contains signals in which the time position of signals is slightly unaligned. We can use this data to show how the function `spcc_align()`: 
 
 ```{r, eval = FALSE}
  data("playback_est_unaligned")
@@ -638,8 +666,8 @@ This is how the signals look before and after being aligned:
 ```{r, eval = FALSE}
 
 # rename sound files so aligned and unaligned signals are intercalated
-unalg <- rename_waves_est(playback_est_unaligned, playback_est_unaligned$sound.files, new.selec = seq(1, 200, by = 2)[1:nrow(W)])
-alg <- rename_waves_est(playback_est_aligned, playback_est_aligned$sound.files, new.selec = seq(2, 200, by = 2)[1:nrow(xa)])
+unalg <- rename_waves_est(playback_est_unaligned, playback_est_unaligned$sound.files, new.selec = seq(1, 200, by = 2)[1:nrow(playback_est_unaligned)])
+alg <- rename_waves_est(playback_est_aligned, playback_est_aligned$sound.files, new.selec = seq(2, 200, by = 2)[1:nrow(playback_est_aligned)])
 
 # add label 
 unalg$type <- "Before aligning"
@@ -664,7 +692,7 @@ In case this doesn't work as expected there is a plan B. The function `seltailor
 
 # Quantifying signal degradation
 
-Most [baRulho](https://cran.r-project.org/package=baRulho) functions are design to quantify acoustic signal degradation. There are a few important things to keep in mind about functions for quantifying degradation:
+Most [baRulho](https://marce10.github.io/baRulho/) functions are design to quantify acoustic signal degradation. There are a few important things to keep in mind about functions for quantifying degradation:
 
 - The package currently assumes that all recordings have been made with the same equipment and recording volume. This will be modified in future versions to allow for amplitude calibration of recordings.
 - Wave envelope and frequency spectrum calculations are made after applying a bandpass filter within the frequency range of the reference signal ('bottom.freq' and 'top.freq' columns)
@@ -675,7 +703,7 @@ Most [baRulho](https://cran.r-project.org/package=baRulho) functions are design 
 
 ## Required data structure
 
-As mentioned above the data must be in `extended_selection_table` format. The data should also contain some additional information. [baRulho](https://cran.r-project.org/package=baRulho) comes with an example `extended_selection_table` data set that can be used to understand the required data structure:
+As mentioned above the data must be in `extended_selection_table` format. The data should also contain some additional information. [baRulho](https://marce10.github.io/baRulho/) comes with an example `extended_selection_table` data set that can be used to understand the required data structure:
 
 ```{r,eval=FALSE}
 
@@ -1087,7 +1115,7 @@ kbl
 
 Please report any bugs [here](https://github.com/maRce10/baRulho/issues). 
 
-The package [baRulho](https://cran.r-project.org/package=baRulho) should be cited as follows:
+The package [baRulho](https://marce10.github.io/baRulho/) should be cited as follows:
 
 Araya-Salas, M. (2020), *baRulho: quantifying habitat-induced degradation of (animal) acoustic signals in R*. R package version 1.0.0.
 
